trunk/Archive2/d2/c6753fbe27e1d9/output
main.cpp: In function 'T f(T&&, T&&)':
main.cpp:7:12: error: 'c' was not declared in this scope
     return c;
            ^
