trunk/Archive2/d2/c6753fbe27e1d9/main.cpp
#include <iostream>

template<typename T>
T f(T&& a, T&& b)
{
    a = std::forward<T>(a) + std::forward<T>(b);
    return c;
}


int main()
{
    
}